improved on documentation on join models.py, corrected email verification via otp

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -21,17 +21,21 @@
             </div>
             <div class="info-item">
                 <h3>Email</h3>
-                <p><a href="mailto:info@youthconnect.org">info@youthconnect.org</a></p>
+                <p><a href="mailto:youthconnectgroup2021@gmail.com">youthconnectgroup2021@gmail.com</a></p>
             </div>
             <div class="info-item">
                 <h3>Phone</h3>
-                <p><a href="tel:+256123456789">+256 123 456 789</a></p>
+                <p><a href="tel:+256785767695">+256 785 767 695</a></p>
+                <p><a href="tel:+256703883767">+256 703 883 767</a></p>
+                <p><a href="tel:+256705197926">+256 705 197 926</a></p>
             </div>
             <div class="info-item">
                 <h3>Social Media</h3>
                 <p>
                     <a href="https://facebook.com/youthconnect" target="_blank">Facebook</a> | 
-                    <a href="https://twitter.com/youthconnect" target="_blank">Twitter</a> | 
+                    <a href="https://linkedln.com/youthconnect" target="_blank">Linkedln</a> |
+                    <a href="https://chat.whatsapp.com/GoQA1mDi2D654FyDzokYjU" target="_blank">Whatsapp</a> |
+                    <a href="https://linkedln.com/youthconnect" target=blank">Twitter</a> | 
                     <a href="https://instagram.com/youthconnect" target="_blank">Instagram</a>
                 </p>
             </div>
@@ -50,7 +54,7 @@
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea id="message" name="message_content" rows="5" placeholder="Your Message" required></textarea>
+                <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
             </div>
             <button type="submit" class="btn-submit">Send Message</button>
         </form>
