--- a/homepage/templates/homepage.html
+++ b/homepage/templates/homepage.html
@@ -62,7 +62,7 @@
     padding: 50px 5%;
     lineheight: 1.6;
     margin: auto;
-    background-color: #f5f5f5; /* Light background for contrast */
+    background-color: black; /* Light background for contrast */
 }
 
 .vision h2 {
