--- a/join/templates/join/join.html
+++ b/join/templates/join/join.html
@@ -8,6 +8,9 @@
 {% block title %}Join{% endblock %}
 
 {% block content %}
+
+<div class="notification-container" aria-live="polite"></div>
+
 <h1>Join Us</h1>
 <p>Welcome to the join page! Please fill out the form below to get started:</p>
 
@@ -48,4 +51,9 @@
         {% endfor %}
     </div>
 {% endif %}
+
+{% block scripts %}
+<script src="{% static 'js/join.js' %}"></script>
+{% endblock %}
+
 {% endblock %}
