--- a/static/css/resources.css
+++ b/static/css/resources.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,6 +10,7 @@ body {
     line-height: 1.6
     text-align: center;
     background-color: #f4f4f4;
+    overflow-x: hidden;
 }
 
 header {
